--- a/release/toc.html
+++ b/release/toc.html
@@ -28,7 +28,7 @@
 <h3><b>Chapter 5<br/>
 <a href="book.html#_routers_views_and_templates">Routers, Views, and Templates</a></b></h3><br/>
 <a href="book.html#_view_explanation"><b>View explanation</b></a><br/>
-<a href="book.html#_templating_strategy_stub"><b>Templating strategy (stub)</b></a><br/>
+<a href="book.html#_templating_strategy"><b>Templating strategy</b></a><br/>
 <a href="book.html#_choosing_a_strategy"><b>Choosing a strategy</b></a><br/>
 <a href="book.html#_routers"><b>Routers</b></a><br/>
 <a href="book.html#_event_binding"><b>Event binding</b></a><br/>
@@ -53,5 +53,5 @@
 <a href="book.html#_example_test_driving_a_task_application"><b>Example: Test-driving a Task application</b></a><br/>
 <h3><b>Chapter 8<br/>
 <a href="book.html#_security_stub">Security (stub)</a></b></h3><br/>
-<a href="book.html#_xss_with_json_bootstrapping_stub"><b>XSS with JSON bootstrapping (stub)</b></a><br/>
+<a href="book.html#_encoding_data_when_bootstrapping_json_data"><b>Encoding data when bootstrapping JSON data</b></a><br/>
 <h1 class="centered">* * *</h1></div></body></html>
