--- a/release/security_stub_.html
+++ b/release/security_stub_.html
@@ -33,18 +33,41 @@
 <a id="_security_stub"></a>Security (stub)</h2></div></div></div>
 <div class="section" lang="en">
 <div class="titlepage"><div><div><h3 class="title">
-<a id="_xss_with_json_bootstrapping_stub"></a>XSS with JSON bootstrapping (stub)</h3></div></div></div>
-<p>Use <code class="literal">json2.js</code> and:</p>
-<pre class="programlisting">&lt;script type=<b class="hl-string"><i style="color:red">"text/json"</i></b> id=<b class="hl-string"><i style="color:red">"something"</i></b>&gt;
-  &lt;%= something.to_json %&gt;
+<a id="_encoding_data_when_bootstrapping_json_data"></a>Encoding data when bootstrapping JSON data</h3></div></div></div>
+<p>As it turns out, bootstrapping JSON data in your erb templates introduces a
+security vulnerability. Consider the case when a user enters a malicious
+<code class="literal">&lt;script&gt;</code> as the title of a task. When the tasks#index page is reloaded,
+and we naively bootstrap task data on the page, the browser will interpret
+and execute the script. Since it’s possible for this script to run on another
+user’s session, it can be quite damaging if it goes on to, for exmple, edit
+or destroy the user’s data.</p>
+<p>To protect against this, we make use of the fact that on HTML5 documents,
+script tags that do not have a type of <code class="literal">text/javascript</code> won’t be automatically
+evaluated by the browser. Therefore we can create an element with the
+HTML-encoded bootstraped data enclosed in a script of type <code class="literal">text/json</code>, fetch
+it using a simple jquery selector, and parse it ourselves.</p>
+<p>Here’s an example:</p>
+<pre class="programlisting">&lt;script type=<b class="hl-string"><i style="color:red">"text/json"</i></b> id=<b class="hl-string"><i style="color:red">"bootstrap"</i></b>&gt;
+  { <b class="hl-string"><i style="color:red">"tasks"</i></b>: &lt;%= @tasks.to_json %&gt; }
 &lt;/script&gt;
 
 &lt;script type=<b class="hl-string"><i style="color:red">"text/javascript"</i></b>&gt;
-  (<b class="hl-keyword">function</b> () {
-    <b class="hl-keyword">var</b> something = JSON.parse($(<b class="hl-string"><i style="color:red">'#something'</i></b>).text());
-    someJavascriptFunction(something);
-  })();
+  $(<b class="hl-keyword">function</b> () {
+    <b class="hl-keyword">var</b> json_div       = document.createElement(<b class="hl-string"><i style="color:red">'div'</i></b>);
+    json_div.innerHTML = $(<b class="hl-string"><i style="color:red">'#bootstrap'</i></b>).text();
+    <b class="hl-keyword">var</b> data           = JSON.parse(json_div.innerHTML);
+    ExampleApp.init(data);
+  });
 &lt;/script&gt;</pre>
+<p>A reliable way to unencode the HTML-encoded JSON string is to use the
+browser’s native functionality, by retreiving a element’s <code class="literal">innerHTML</code>.
+So in the above script, we create a <code class="literal">json_div</code> element, assign its
+<code class="literal">innerHTML</code> to the bootstrap script’s text, and retreive back out,
+unencoded. The final result is the <code class="literal">data</code> variable containing proper JSON
+that can be parsed and passed along to your app’s init function.</p>
+<p>This approach can be seen on the example app on the
+<code class="literal">app/views/tasks/index.html.erb</code> template</p>
+<p>TODO: Discuss using <code class="literal">json2.js</code>:</p>
 </div>
 </div>
 
