Generate new release

--- a/release/toc.html
+++ b/release/toc.html
@@ -48,8 +48,8 @@
 <a href="book.html#_uploading_attachments"><b>Uploading attachments</b></a><br/>
 <h3><b>Chapter 7<br/>
 <a href="book.html#_testing">Testing</a></b></h3><br/>
-<a href="book.html#_full_stack_integration_testing_1_todo"><b>Full-stack integration testing (1 todo)</b></a><br/>
-<a href="book.html#_isolated_unit_testing_some_stubs_some_wip"><b>Isolated unit testing (some stubs, some wip)</b></a><br/>
+<a href="book.html#_full_stack_integration_testing"><b>Full-stack integration testing</b></a><br/>
+<a href="book.html#_isolated_unit_testing"><b>Isolated unit testing</b></a><br/>
 <a href="book.html#_example_test_driving_a_task_application"><b>Example: Test-driving a Task application</b></a><br/>
 <h3><b>Chapter 8<br/>
 <a href="book.html#_security_stub">Security (stub)</a></b></h3><br/>
